Attempted fix for misaligned text in dropdown. Font seemed to be the issue.

--- a/public/static/css/reader.css
+++ b/public/static/css/reader.css
@@ -1,6 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Tangerine);
 @import url(https://fonts.googleapis.com/css?family=Mirza);
 @import url(https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300);
+@import url('https://fonts.googleapis.com/css?family=Droid+Serif');
 
 /* ======== GENERAL ======== */
 
@@ -368,9 +369,9 @@ body.book-cover-loaded .loader.cover {
     max-width: 100%;
     border: 1px solid rgba(0,0,0,0);
     border-radius: 0.2em;
-    padding: 0.25em 1em;
-    font-size: 18px;
-    font-family: 'Mirza';
+    padding: 0.6em 1em;
+    font-size: 14px;
+    font-family: 'Droid Serif','Times New Roman';
     color: #444;
     box-shadow: 0px 0px 2px #a59590;
     transition: background-color 0.2s ease-in-out;
@@ -407,8 +408,8 @@ body.book-cover-loaded .loader.cover {
     border-left: 6px solid transparent;
     border-right: 6px solid transparent;
     display: inline-block;
-    margin-top: 10px;
-    margin-left: 0.4em;
+    margin-top: 6px;
+    margin-left: 0.55em;
     border-top: 6px solid #555;
     transition: border-width 0.2s ease-in-out;
 }
